--- a/style.css
+++ b/style.css
@@ -84,18 +84,23 @@ section {
 }
 
 input {
+    background-color: white;
     font-family: inherit;
     width: calc(56px + 8vw + 2vh);
     padding: 6px 16px;
     margin: 12px 0px;
     border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.4)
+    border: 1px solid rgba(0, 0, 0, 0.4);
 }
 
 input:focus {
     border: none;
     outline: none;
     box-shadow: 0 0 8px 3px rgba(0, 152, 253, 0.4);
+}
+
+input:invalid:focus {
+    box-shadow: 0 0 8px 3px rgba(255, 69, 63, 0.4);
 }
 
 button {
