--- a/style.css
+++ b/style.css
@@ -9,16 +9,25 @@
 }
 
 
+input:focus {
+    border: none;
+    outline: none;
+}
+
+
 :root {
     --padding: 32px;
     --button-shadow: 0 0 16px 3px rgba(3, 196, 87, 0.2);
     --button-shadow-hover:0 0 16px 3px rgba(2, 214, 94, 0.6);
+    --inputBox-height: 34px;
+    --inputBox-width: calc(56px + 8vw + 2vh);
 }
 
 * {
     padding: 0;
     margin: 0;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 body {
@@ -44,6 +53,18 @@ form {
     font-family: 'Norse-Bold';
     font-size: 128px;
     color: white;
+}
+
+.icon {
+    margin: 112px 0px;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+img {
+    width: 96px;
+    display: inline;
 }
 
 .content {
@@ -86,21 +107,38 @@ section {
 input {
     background-color: white;
     font-family: inherit;
-    width: calc(56px + 8vw + 2vh);
-    padding: 6px 16px;
+    padding: 4px 16px;
     margin: 12px 0px;
+}
+
+input:not(#password, #confirmPassword){
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.4);
+    width: calc(var(--inputBox-width) + 32px);
+    height: var(--inputBox-height);
 }
 
-input:focus {
+
+.pwd, .second {
+    height: var(--inputBox-height);
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+    margin-top: 12px;
+
+    display: flex;
+    align-items: center;
+}
+
+#password, #confirmPassword {
     border: none;
-    outline: none;
-    box-shadow: 0 0 8px 3px rgba(0, 152, 253, 0.4);
+    width: calc(var(--inputBox-width));
 }
 
-input:invalid:focus {
-    box-shadow: 0 0 8px 3px rgba(255, 69, 63, 0.4);
+.eye-icon {
+    height: var(--inputBox-height);
+    width: auto;
+    padding: 8px;
+    cursor: pointer;
 }
 
 button {
